[fix] main's flex wrap and items width

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,11 +62,14 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 20px;
 }
 
 main > section {
+  flex: 1 1 600px;
   width: 50%;
+  max-width: 900px;
   min-height: 600px;
   margin-top: 30px;
   background: var(--main-fg-transparent);
